--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,6 +1,6 @@
 ### Database Configuration
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/spring_mvc_mysql?characterEncoding=UTF-8
-db.user=root
+db.username=root
 db.password=mysql
 db.init=false
