--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -4,3 +4,14 @@ db.url=jdbc:mysql://localhost:3306/spring_mvc_mysql?characterEncoding=UTF-8
 db.username=root
 db.password=mysql
 db.init=false
+
+### Hibernate
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.format_sql=false
+hibernate.hbm2ddl.auto=update
+hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+hibernate.show_sql=false
+hibernate.database=MYSQL
+
+### Entity.Manager
+entity.manager.packages.to.scan=com.aidansu.demo.model
