--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <jsp.version>2.2.1-b03</jsp.version>
     <jstl.version>1.2</jstl.version>
     <gson.version>2.5</gson.version>
+    <hibernate.version>5.2.10.Final</hibernate.version>
   </properties>
 
   <dependencies>
@@ -116,6 +117,18 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>${gson.version}</version>
+    </dependency>
+
+    <!-- Hibernate -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>${hibernate.version}</version>
     </dependency>
 
   </dependencies>
